# tiauth

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh  resources.json  test.sh
.github/workflows/: ci.yml  test.yml
ci/: Dockerfile  test.sh
ci/deployment/: .env  deploy.sh  docker-compose.yml
db/: tidb.sqlite
dbsqlite/: Cargo.toml  test
dbsqlite/src/: lib.rs  main.rs
deployment/: .env  deploy.sh  docker-compose.yml
migrations/: 20211024163317_create_auth.down.sql  20211024163317_create_auth.up.sql
migrations/2021-10-24-081421_create_auth/: down.sql  up.sql
src/: auth.rs  claims.rs  db.rs  error.rs  files.rs  input.rs  lib.rs  login.rs  main.rs  models.rs  register.rs  schema.rs
