[package]
name = "dbsqlite"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_rusqlite = "0.27.0"
log = "0.4"
env_logger = "0.8.3"

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]